# jester-stdlib

./: .clang-format  .gitattributes  CMakeLists.txt  README.md
include/jester/: jester.h
include/jester/data_structures/: jester_data_structures.h
include/jester/data_structures/array/: jester_array.h  jester_dynamic_array.h
include/jester/datastructs/: jester-datastructs.h
include/jester/datastructs/array/: jester-array.h  jester-dynamic-array.h
include/jester/log/: jester-log.h
src/data_structures/array/: jester_dynamic_array.c
src/datastructs/array/: jester-dynamic-array.c
src/log/: jester-log.c  jester_log.c
tests/log/: log_test.c
